--- a/resources/assets/sass/global/thread-watcher.scss
+++ b/resources/assets/sass/global/thread-watcher.scss
@@ -6,13 +6,15 @@
     max-width: 100vw;
     max-height: 100vw;
     z-index: 90;
-    padding: 0.5em;
+    padding: 6px;
 
     top: 45px;
     left: 10px;
 
     .watched-legend {
         display: flex;
+        max-width: 90vw;
+        max-width: calc(100% - 32px);
     }
     .watched-space { // b
         flex-grow: 1;
